--- a/shopfloor_mobile_base/templates/main.xml
+++ b/shopfloor_mobile_base/templates/main.xml
@@ -19,7 +19,7 @@
         <t t-call="shopfloor_mobile_base.shopfloor_app_layout">
             <t
                 t-set="x_icon"
-                t-value="'/shopfloor_mobile_base/assets/src/assets/icons/favicon-32x32.png?' + app_version"
+                t-value="'/shopfloor_mobile_base/static/wms/src/assets/icons/favicon-32x32.png?v=' + app_version"
             />
             <t t-set="html_data" t-value="{'app_version': app_version}" />
             <t t-set="title">Shopfloor WMS app</t>
