--- a/shopfloor_mobile_base/templates/main.xml
+++ b/shopfloor_mobile_base/templates/main.xml
@@ -19,20 +19,17 @@
         <t t-call="shopfloor_mobile_base.shopfloor_app_layout">
             <t
                 t-set="x_icon"
-                t-value="'/shopfloor_mobile_base/static/wms/src/assets/icons/favicon-32x32.png?v=' + app_version"
+                t-value="'/shopfloor_mobile_base/static/wms/src/assets/icons/favicon-32x32.png?v=' + app_info['version']"
             />
-            <t t-set="html_data" t-value="{'app_version': app_version}" />
+            <t
+                t-set="html_data"
+                t-value="{'shopfloor_app_version': app_info['version']}"
+            />
             <t t-set="title">Shopfloor WMS app</t>
             <t t-set="head">
                 <meta name="viewport" content="width=device-width, initial-scale=1" />
                 <script type="text/javascript">
-          var shopfloor_app_info = {
-            app_version: "<t t-esc="app_version" />",
-            running_env: "<t t-esc="running_env" />",
-            demo_mode: <t t-esc="'true' if demo_mode else 'false'" />,
-            auth_type: "<t t-esc="auth_type" />",
-            base_url: "<t t-esc="app_base_url" />",
-          };
+          var shopfloor_app_info = <t t-raw="json.dumps(app_info)" />;
         </script>
                 <t t-call="shopfloor_mobile_base.shopfloor_app_assets" />
                 <t
