sf_mobile_auth_api_key: ease access to groups

--- a/shopfloor_mobile_base_auth_api_key/views/shopfloor_app.xml
+++ b/shopfloor_mobile_base_auth_api_key/views/shopfloor_app.xml
@@ -9,6 +9,14 @@
                 <field
                     name="auth_api_key_group_ids"
                     widget="many2many_tags"
+                    class="oe_inline"
+                    attrs="{'invisible': [('auth_type', '!=', 'api_key')]}"
+                />
+                <button
+                    type="object"
+                    name="action_manage_api_key_groups"
+                    string="Manage groups"
+                    class="btn btn-link"
                     attrs="{'invisible': [('auth_type', '!=', 'api_key')]}"
                 />
             </field>
