sf_mobile_base: fix device zoom

--- a/shopfloor_mobile_base/templates/main.xml
+++ b/shopfloor_mobile_base/templates/main.xml
@@ -24,6 +24,7 @@
             <t t-set="html_data" t-value="{'app_version': app_version}" />
             <t t-set="title">Shopfloor WMS app</t>
             <t t-set="head">
+                <meta name="viewport" content="width=device-width, initial-scale=1" />
                 <script type="text/javascript">
           var shopfloor_app_info = {
             app_version: "<t t-esc="app_version" />",
