--- a/shopfloor_mobile_base/templates/assets.xml
+++ b/shopfloor_mobile_base/templates/assets.xml
@@ -195,6 +195,11 @@
             t-attf-src="/shopfloor_mobile_base/static/wms/src/scenario/form.js?v=#{app_version}"
             type="module"
         />
+        <script
+            id="script_theme"
+            t-attf-src="/shopfloor_mobile_base/static/wms/src/theme.js?v=#{app_info['version']}"
+            type="module"
+        />
 
         <t
             id="new_scenario_hook"
