sf_mobile_base: fix theme load
Yet another bunch of typos

--- a/shopfloor_mobile_base/templates/assets.xml
+++ b/shopfloor_mobile_base/templates/assets.xml
@@ -197,7 +197,7 @@
         />
         <script
             id="script_theme"
-            t-attf-src="/shopfloor_mobile_base/static/wms/src/theme.js?v=#{app_info['version']}"
+            t-attf-src="/shopfloor_mobile_base/static/wms/src/theme.js?v=#{app_version}"
             type="module"
         />
 
