--- a/shopfloor_mobile_base/static/wms/src/css/main.css
+++ b/shopfloor_mobile_base/static/wms/src/css/main.css
@@ -469,3 +469,45 @@ main.v-content > .v-content__wrap > .header .container {
     */
     position: absolute;
 }
+
+/* searchbar */
+.searchbar {
+    position: relative;
+}
+.searchbar label.v-label {
+    top: -20px;
+    left: 0px;
+    right: auto;
+    position: absolute;
+}
+.searchbar input {
+    margin-bottom: 8px;
+    padding: 5px;
+    line-height: 1.5;
+}
+@keyframes scanning {
+    0%,
+    40%,
+    100% {
+        background-color: #ffe0e0;
+    }
+    20% {
+        background-color: #fa9696;
+    }
+}
+.searchbar input.searchbar-keyboard {
+    caret-color: auto !important;
+}
+.searchbar input.searchbar-keyboard:focus::placeholder {
+    color: transparent;
+}
+.searchbar input.searchbar-scan {
+    caret-color: transparent;
+    /*border-radius: 10%;*/
+    animation-name: scanning;
+    animation-duration: 3s;
+    animation-timing-function: ease-out;
+    animation-delay: 0;
+    animation-direction: normal;
+    animation-iteration-count: infinite;
+}
