--- a/shopfloor_mobile_base/templates/main.xml
+++ b/shopfloor_mobile_base/templates/main.xml
@@ -12,20 +12,20 @@
         name="Shopfloor app layout"
     >
         <link type="image/x-icon" position="after">
-            <link rel="manifest" t-att-href="app_info['manifest_url']" />
+            <link rel="manifest" t-att-href="app_info.manifest_url" />
         </link>
     </template>
     <template id="shopfloor_app_main" name="Shopfloor app main">
         <t t-call="shopfloor_mobile_base.shopfloor_app_layout">
             <t
                 t-set="x_icon"
-                t-value="'/shopfloor_mobile_base/static/wms/src/assets/icons/favicon-32x32.png?v=' + app_info['version']"
+                t-value="'/shopfloor_mobile_base/static/wms/src/assets/icons/favicon-32x32.png?v=' + app_info.version"
             />
             <t
                 t-set="html_data"
-                t-value="{'shopfloor_app_version': app_info['version']}"
+                t-value="{'shopfloor_app_version': app_info.version}"
             />
-            <t t-set="title" t-esc="app_info['name']" />
+            <t t-set="title" t-esc="app_info.name" />
             <t t-set="head">
                 <meta name="viewport" content="width=device-width, initial-scale=1" />
                 <script type="text/javascript">
@@ -34,7 +34,7 @@
                 <t t-call="shopfloor_mobile_base.shopfloor_app_assets" />
                 <t
                     t-call="shopfloor_mobile_base.shopfloor_app_demo_assets"
-                    t-if="demo_mode"
+                    t-if="app_info.demo_mode"
                 />
             </t>
             <noscript>
