sf_mobile_base: add event on drawer transition
to have a way to easily identify whether
the drawer is open or closed, as well as
applying logic on transition

--- a/shopfloor_mobile_base/templates/assets.xml
+++ b/shopfloor_mobile_base/templates/assets.xml
@@ -138,6 +138,7 @@
         <script
             id="script_component_screen"
             t-attf-src="/shopfloor_mobile_base/static/wms/src/components/screen.js?v=#{app_info.version}"
+            type="module"
         />
         <script
             id="script_component_misc"
