--- a/shopfloor_mobile_base/templates/assets.xml
+++ b/shopfloor_mobile_base/templates/assets.xml
@@ -2,7 +2,7 @@
 <!--
     Copyright 2020 Camptocamp SA (http://www.camptocamp.com)
     @author Simone Orsi <simahawk@gmail.com>
-    License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+    License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl.html).
 -->
 <odoo>
     <template id="shopfloor_app_assets" name="Shopfloor app assets">
