--- a/shopfloor_mobile_base_auth_api_key/templates/assets.xml
+++ b/shopfloor_mobile_base_auth_api_key/templates/assets.xml
@@ -2,7 +2,7 @@
 <!--
     Copyright 2021 Camptocamp SA (http://www.camptocamp.com)
     @author Simone Orsi <simahawk@gmail.com>
-    License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
+    License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl.html).
 -->
 <odoo>
     <template
