--- a/shopfloor_mobile_base/templates/assets.xml
+++ b/shopfloor_mobile_base/templates/assets.xml
@@ -141,6 +141,11 @@
             type="module"
         />
         <script
+            id="script_component_report_issue"
+            t-attf-src="/shopfloor_mobile_base/static/wms/src/components/report_issue.js?v=#{app_info.version}"
+            type="module"
+        />
+        <script
             id="script_component_misc"
             t-attf-src="/shopfloor_mobile_base/static/wms/src/components/misc.js?v=#{app_info.version}"
             type="module"
