shopfloor_mobile_base: fix border style

--- a/shopfloor_mobile_base/static/wms/src/css/main.css
+++ b/shopfloor_mobile_base/static/wms/src/css/main.css
@@ -500,6 +500,7 @@ main.v-content > .v-content__wrap > .header .container {
     margin-bottom: 8px;
     padding: 5px;
     line-height: 1.5;
+    border-style: none none solid none;
 }
 @keyframes scanning {
     0%,
