shopfloor_mobile_base: create linear-progress component

--- a/shopfloor_mobile_base/static/wms/src/css/main.css
+++ b/shopfloor_mobile_base/static/wms/src/css/main.css
@@ -528,3 +528,10 @@ main.v-content > .v-content__wrap > .header .container {
     animation-direction: normal;
     animation-iteration-count: infinite;
 }
+
+.linear-progress {
+    border-radius: 10px;
+    font-size: smaller;
+    font-weight: bold;
+    border: black 1px solid;
+}
